# GeoFlood

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.pytest_tmp/sample_data0/: sample_zones.geojson
.pytest_tmp/test_cli_prints_suspicious_dep0/: report.json
.pytest_tmp/test_cli_run_creates_raster_an0/: zonal_stats.csv
.pytest_tmp/test_report_includes_dem_prove0/: provenance_dem.json
data/: README.md  norfolk_elizabeth_river_dem.json
docs/: api.md  architecture.md  ci_cd.md  data_quality.md  index.md
outputs/: .gitkeep  demo_report.json  norfolk_report_2m.json
scripts/: download_real_dem.py  generate_report.py  generate_sample_data.py
site/: 404.html  index.html
site/api/: index.html
site/architecture/: index.html
site/ci_cd/: index.html
site/data_quality/: index.html
site/search/: search_index.json
src/geoflood/: __init__.py  api.py  cli.py  config.py  flood_depth.py  raster.py  reporting.py  sample_data.py  zonal_stats.py
tests/: conftest.py
tests/data/: sample_dem.tif
tests/integration/: test_api.py  test_cli_pipeline.py
tests/unit/: test_flood_depth.py  test_raster.py  test_reporting.py
