[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "geoflood"
version = "0.1.1"
description = "Production-style geospatial flood-depth processing platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Amin Ilia" }
]
maintainers = [
    { name = "Neelon Engineering Solutions, LLC" }
]
license = { text = "MIT" }
keywords = ["flood", "geospatial", "raster", "fastapi", "ci-cd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "fastapi>=0.115,<1",
    "geopandas>=1.0,<2",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "rasterio>=1.4,<2",
    "shapely>=2.0,<3",
    "typer>=0.15,<1",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "black>=24.10,<27",
    "build>=1.2,<2",
    "httpx>=0.27,<1",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mypy>=1.13,<2",
    "pip-audit>=2.7,<3",
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.8,<1",
]

[project.scripts]
geoflood = "geoflood.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/geoflood"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/geoflood"]
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = ["rasterio.*", "geopandas.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["integration: tests that exercise multiple application layers"]

[tool.coverage.run]
source = ["geoflood"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
